Apply the official product name "FlexConfirmMail"
I've been developing this project under the code name of "DeneBrowser
CheckMyMail". After a bit of discussions, I decided to rebrand this
addin as "FlexConfirmMail". Fix it accordingly.

Signed-off-by: Fujimoto Seiji <fujimoto@ceptord.net>

--- a/MainDialog.xaml
+++ b/MainDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="CheckMyMail.MainDialog"
+﻿<Window x:Class="FlexConfirmMail.MainDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CheckMyMail"
+             xmlns:local="clr-namespace:FlexConfirmMail"
              mc:Ignorable="d" Width="750" Height="500"
              Title="">
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
