--- a/Dialog/MainDialog.xaml
+++ b/Dialog/MainDialog.xaml
@@ -4,39 +4,37 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FlexConfirmMail"
-             mc:Ignorable="d" Width="750" Height="500"
+             mc:Ignorable="d" Width="700" Height="550"
              Title="">
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="375*"/>
-            <ColumnDefinition Width="191*"/>
-            <ColumnDefinition Width="185*"/>
+            <ColumnDefinition Width="347*"/>
+            <ColumnDefinition Width="347*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="280*"/>
-            <RowDefinition Height="150*"/>
-            <RowDefinition Height="32*"/>
+            <RowDefinition Height="330*"/>
+            <RowDefinition Height="200*"/>
+            <RowDefinition Height="40*"/>
         </Grid.RowDefinitions>
-        <StackPanel Margin="0,0,10,10" Width="160" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="2" Height="20" Grid.Column="2">
+        <StackPanel Margin="0,0,10,10.5" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="2" Height="20" Grid.Column="1">
             <Button x:Name="ButtonOK" Content="送信" Width="75" IsEnabled="False" Click="HandleClickOK" ToolTip="メールを送信します"/>
             <Button Content="キャンセル" Width="75" Margin="10,0,0,0" IsCancel="True" ToolTip="メールの送信を中止します"/>
         </StackPanel>
-        <Label x:Name="labelHint" Content="" Grid.Row="2" Width="555" HorizontalAlignment="Left" Foreground="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}" Margin="10,0,0,0" Grid.ColumnSpan="2"/>
-        <GroupBox Header="外部の送信先" Margin="10,10,10,0">
+        <GroupBox Header="外部の送信先" Margin="10,10,10,4.5">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spExt"/>
                 </ScrollViewer>
             </Border>
         </GroupBox>
-        <GroupBox Header="社内の送信先" Margin="0,10,10,0" Grid.Column="1" Grid.ColumnSpan="2">
+        <GroupBox Header="社内の送信先" Margin="0,10,10,4.5" Grid.Column="1">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spTrusted"/>
                 </ScrollViewer>
             </Border>
         </GroupBox>
-        <GroupBox Header="添付ファイル／その他の警告" Margin="10,10,10,5" Grid.ColumnSpan="3" Grid.Row="1">
+        <GroupBox Header="添付ファイル／その他の警告" Margin="10,10.5,10,4" Grid.ColumnSpan="2" Grid.Row="1">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spFile"/>
