--- a/Dialog/ConfigDialog.xaml
+++ b/Dialog/ConfigDialog.xaml
@@ -62,7 +62,7 @@
             <TabItem Header="注意が必要なファイル名">
                 <Grid>
 
-                    <GroupBox Header="注意が必要なドメイン設定" Margin="5,5,5,5">
+                    <GroupBox Header="注意が必要なファイル名設定" Margin="5,5,5,5">
                         <TextBox x:Name="UnsafeFiles" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3"></TextBox>
                     </GroupBox>
                 </Grid>
