Add new option 'MainSkipIfNoExt'
This option allows to skip the main dialog if all the recipients
are trusted (= no external address).

The default is disabled, but it should come handy for users who
are doing internal correspondences a lot.

Signed-off-by: Fujimoto Seiji <fujimoto@clear-code.com>

--- a/Dialog/ConfigDialog.xaml
+++ b/Dialog/ConfigDialog.xaml
@@ -42,6 +42,13 @@
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
+                        <GroupBox Header="その他の設定" Padding="5,5,5,5" Margin="5,5,5,5">
+                            <StackPanel>
+                                <StackPanel>
+                                    <CheckBox x:Name="MainSkipIfNoExt" Content="宛先が社内ドメインのみの場合は確認をスキップする" />
+                                </StackPanel>
+                            </StackPanel>
+                        </GroupBox>
                     </StackPanel>
                 </Grid>
             </TabItem>
