--- a/Dialog/ConfigDialog.xaml
+++ b/Dialog/ConfigDialog.xaml
@@ -3,78 +3,79 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:resx="clr-namespace:FlexConfirmMail.Properties"
         xmlns:local="clr-namespace:FlexConfirmMail"
         mc:Ignorable="d"
-        Title="FlexConfirmMail設定" Height="450" Width="550">
+        Title="{x:Static resx:Resources.ConfigWindowTitle}" Height="450" Width="550">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="375*"/>
             <RowDefinition Height="39*"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" Margin="0,0,7,0.5" HorizontalAlignment="Right" VerticalAlignment="Stretch" Grid.Row="1">
-            <Button Content="設定を保存して終了" Click="SaveButton_Click" VerticalAlignment="Center" Margin="5,0,5,0" Width="120"/>
-            <Button Content="キャンセル" VerticalAlignment="Center" Margin="5,0,5,0" Width="120" IsCancel="True"/>
+            <Button Content="{x:Static resx:Resources.SaveAndQuit}" Click="SaveButton_Click" VerticalAlignment="Center" Margin="5,0,5,0" Width="120"/>
+            <Button Content="{x:Static resx:Resources.Cancel}" VerticalAlignment="Center" Margin="5,0,5,0" Width="120" IsCancel="True"/>
         </StackPanel>
         <TabControl Margin="0,0,0,0.5" SelectionChanged="TabControl_SelectionChanged"  BorderBrush="{DynamicResource {x:Static SystemColors.InactiveBorderBrushKey}}">
-            <TabItem Header="基本設定">
+            <TabItem Header="{x:Static resx:Resources.ConfigGeneral}">
                 <Grid Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}">
                     <StackPanel Grid.ColumnSpan="2" Margin="0,0,0,0.5">
-                        <GroupBox Header="送信カウントダウン設定" Padding="5,5,5,5" Margin="5,5,5,5">
+                        <GroupBox Header="{x:Static resx:Resources.ConfigCount}" Padding="5,5,5,5" Margin="5,5,5,5">
                             <StackPanel>
-                                <CheckBox x:Name="CountEnabled" Margin="0,5,0,5" Content="メール送信前のカウントダウンを有効化する" />
-                                <CheckBox x:Name="CountAllowSkip" Margin="0,5,0,5" Content="カウントダウンのダイアログの「いますぐ送信」ボタンを有効化する" />
+                                <CheckBox x:Name="CountEnabled" Margin="0,5,0,5" Content="{x:Static resx:Resources.ConfigCountEnabled}" />
+                                <CheckBox x:Name="CountAllowSkip" Margin="0,5,0,5" Content="{x:Static resx:Resources.ConfigCountAllowSkip}" />
                                 <StackPanel Orientation="Horizontal">
-                                    <Label>送信までのカウントダウン秒数:</Label>
+                                    <Label Content="{x:Static resx:Resources.ConfigCountSeconds}"></Label>
                                     <TextBox x:Name="CountSeconds" Width="40" VerticalAlignment="center"></TextBox>
-                                    <Label>秒</Label>
+                                    <Label Content="{x:Static resx:Resources.Seconds}"></Label>
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
-                        <GroupBox Header="警告設定" Padding="5,5,5,5" Margin="5,5,5,5">
+                        <GroupBox Header="{x:Static resx:Resources.ConfigWarning}" Padding="5,5,5,5" Margin="5,5,5,5">
                             <StackPanel>
                                 <StackPanel>
-                                    <CheckBox x:Name="SafeBccEnabled" Content="To/CCに一定数以上のドメインが含まれている場合に警告する" />
+                                    <CheckBox x:Name="SafeBccEnabled" Content="{x:Static resx:Resources.ConfigSafeBccEnabled}" />
                                     <StackPanel Orientation="Horizontal">
-                                        <Label>警告対象となるドメインの数: </Label>
+                                        <Label Content="{x:Static resx:Resources.ConfigSafeBccThreshold}"></Label>
                                         <TextBox x:Name="SafeBccThreshold" Width="40" VerticalAlignment="center"></TextBox>
-                                        <Label>件以上</Label>
+                                        <Label Content="{x:Static resx:Resources.ConfigSafeBccThresholdSuffix}"></Label>
                                     </StackPanel>
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
-                        <GroupBox Header="その他の設定" Padding="5,5,5,5" Margin="5,5,5,5">
+                        <GroupBox Header="{x:Static resx:Resources.ConfigMisc}" Padding="5,5,5,5" Margin="5,5,5,5">
                             <StackPanel>
                                 <StackPanel>
-                                    <CheckBox x:Name="MainSkipIfNoExt" Content="宛先が社内ドメインのみの場合は確認をスキップする" />
+                                    <CheckBox x:Name="MainSkipIfNoExt" Content="{x:Static resx:Resources.ConfigMainSkipIfNoExt}" />
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="社内ドメイン">
+            <TabItem Header="{x:Static resx:Resources.TrustedDomains}">
                 <Grid>
-                    <GroupBox Header="社内ドメイン設定" Margin="5,5,5,5">
+                    <GroupBox Header="{x:Static resx:Resources.ConfigTrustedDomains}" Margin="5,5,5,5">
                         <TextBox x:Name="TrustedDomains" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3"></TextBox>
                     </GroupBox>
                 </Grid>
             </TabItem>
-            <TabItem Header="注意が必要なドメイン">
+            <TabItem Header="{x:Static resx:Resources.UnsafeDomains}">
                 <Grid>
-                    <GroupBox Header="注意が必要なドメイン設定" Margin="5,5,5,5">
+                    <GroupBox Header="{x:Static resx:Resources.ConfigUnsafeDomains}" Margin="5,5,5,5">
                         <TextBox x:Name="UnsafeDomains" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3"></TextBox>
                     </GroupBox>
                 </Grid>
             </TabItem>
-            <TabItem Header="注意が必要なファイル名">
+            <TabItem Header="{x:Static resx:Resources.UnsafeFiles}">
                 <Grid>
 
-                    <GroupBox Header="注意が必要なファイル名設定" Margin="5,5,5,5">
+                    <GroupBox Header="{x:Static resx:Resources.ConfigUnsafeFiles}" Margin="5,5,5,5">
                         <TextBox x:Name="UnsafeFiles" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3"></TextBox>
                     </GroupBox>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="tabAboutAddon" Header="このアドオンについて">
+            <TabItem x:Name="tabAboutAddon" Header="{x:Static resx:Resources.AboutAddon}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100"/>
@@ -84,7 +85,7 @@
                         <Label x:Name="VersionInfo" Content="FlexConfirmMail" Foreground="#FF625661" FontWeight="Bold" FontSize="25"></Label>
                         <Label Foreground="Black" FontSize="12">2022 ClearCode Inc. All rights reserved.</Label>
                     </StackPanel>
-                    <GroupBox Header="動作ログ" Grid.Row="1" Margin="5,5,5,5">
+                    <GroupBox Header="{x:Static resx:Resources.TextLog}" Grid.Row="1" Margin="5,5,5,5">
                         <TextBox x:Name="TextLog" Padding="1,3,1,3" Margin="3,3,3,3" IsReadOnly="True" VerticalScrollBarVisibility="Visible" TextWrapping="Wrap"/>
                     </GroupBox>
 
