--- a/Dialog/MainDialog.xaml
+++ b/Dialog/MainDialog.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:resx="clr-namespace:FlexConfirmMail.Properties"
              xmlns:local="clr-namespace:FlexConfirmMail"
              mc:Ignorable="d" Width="700" Height="550"
              Title="">
@@ -17,24 +18,24 @@
             <RowDefinition Height="40*"/>
         </Grid.RowDefinitions>
         <StackPanel Margin="0,0,10,10.5" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Grid.Row="2" Height="20" Grid.Column="1">
-            <Button x:Name="ButtonOK" Content="送信" Width="75" IsEnabled="False" Click="ButtonOK_Click" ToolTip="メールを送信します"/>
-            <Button Content="キャンセル" Width="75" Margin="10,0,0,0" IsCancel="True" ToolTip="メールの送信を中止します"/>
+            <Button x:Name="ButtonOK" Content="{x:Static resx:Resources.Send}" Width="75" IsEnabled="False" Click="ButtonOK_Click"/>
+            <Button Content="{x:Static resx:Resources.Cancel}" Width="75" Margin="10,0,0,0" IsCancel="True"/>
         </StackPanel>
-        <GroupBox Header="外部の送信先" Margin="10,10,10,4.5">
+        <GroupBox Header="{x:Static resx:Resources.MainExternal}" Margin="10,10,10,4.5">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spExt"/>
                 </ScrollViewer>
             </Border>
         </GroupBox>
-        <GroupBox Header="社内の送信先" Margin="0,10,10,4.5" Grid.Column="1">
+        <GroupBox Header="{x:Static resx:Resources.MainInternal}" Margin="0,10,10,4.5" Grid.Column="1">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spTrusted"/>
                 </ScrollViewer>
             </Border>
         </GroupBox>
-        <GroupBox Header="添付ファイル／その他の警告" Margin="10,10.5,10,4" Grid.ColumnSpan="2" Grid.Row="1">
+        <GroupBox Header="{x:Static resx:Resources.MainFile}" Margin="10,10.5,10,4" Grid.ColumnSpan="2" Grid.Row="1">
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spFile"/>
