--- a/Dialog/MainDialog.xaml
+++ b/Dialog/MainDialog.xaml
@@ -28,7 +28,13 @@
                 </ScrollViewer>
             </Border>
         </GroupBox>
-        <GroupBox Header="{x:Static resx:Resources.MainInternal}" Margin="0,10,10,4.5" Grid.Column="1">
+        <GroupBox Margin="0,10,10,4.5" Grid.Column="1">
+            <GroupBox.Header>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{x:Static resx:Resources.MainTrusted}"/>
+                    <Button Click="CheckAllTrusted_Click" Margin="7 0 0 0" FontSize="10" Content="{x:Static resx:Resources.MainCheckAll}"/>
+                </StackPanel>
+            </GroupBox.Header>
             <Border BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1" Margin="5" Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" Padding="5">
                 <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <StackPanel x:Name="spTrusted"/>
