UI: add an option for new domains

--- a/Dialog/ConfigDialog.xaml
+++ b/Dialog/ConfigDialog.xaml
@@ -40,6 +40,7 @@
                                         <TextBox x:Name="SafeBccThreshold" Width="40" VerticalAlignment="center"></TextBox>
                                         <Label Content="{x:Static resx:Resources.ConfigSafeBccThresholdSuffix}"></Label>
                                     </StackPanel>
+                                    <CheckBox x:Name="SafeNewDomainsEnabled" Content="{x:Static resx:Resources.ConfigSafeNewDomainsEnabled}" />
                                 </StackPanel>
                             </StackPanel>
                         </GroupBox>
