--- a/Dialog/ConfigDialog.xaml
+++ b/Dialog/ConfigDialog.xaml
@@ -64,7 +64,14 @@
             <TabItem Header="{x:Static resx:Resources.UnsafeDomains}">
                 <Grid>
                     <GroupBox Header="{x:Static resx:Resources.ConfigUnsafeDomains}" Margin="5,5,5,5">
-                        <TextBox x:Name="UnsafeDomains" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3" VerticalScrollBarVisibility="Auto"></TextBox>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <TextBox Grid.Row="0" x:Name="UnsafeDomains" AcceptsReturn="True"  Padding="1,3,1,3" Margin="3,3,3,3" VerticalScrollBarVisibility="Auto"></TextBox>
+                            <CheckBox Grid.Row="1" x:Name="UntrustUnsafeRecipients" Margin="0,5,0,5" Content="{x:Static resx:Resources.UntrustUnsafeRecipients}" />
+                        </Grid>
                     </GroupBox>
                 </Grid>
             </TabItem>
